[package]
name = "blockchain-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"
rocksdb = "0.19"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# GUI
iced = { version = "0.13.1", features = ["tokio","advanced"] }
iced_aw = "0.11"

# 비동기
tokio = { version = "1.28", features = ["full"] }

# 네트워킹(WebSocket/SSE) 쓸 수도 있음
# tokio-tungstenite = "0.18"

# 기타 필요 라이브러리
[workspace]
resolver = "2"