[package]
name = "blockchain-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"
rocksdb = "0.19"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# GUI
iced = { version = "0.12.1", features = ["tokio","advanced"] }
iced_aw = "0.9.3"

# 비동기
tokio = { version = "1.28", features = ["full"] }
async-stream = "0.3"

# 네트워킹(WebSocket/SSE) 쓸 수도 있음
tokio-tungstenite = "0.18"

# URL 파싱을 위한 크레이트
url = "2.3"

# 비동기 스트림 확장을 위한 크레이트
futures = "0.3"
